css/gui.css
body
{
	font-size: 1em;
}

.gui-component {
	border: 1px solid black;
}

.button-group {
	padding: 0 0 0 0;
}

.button-group .btn{
	font-size: inherit;
	display: block;
    white-space: normal;
}

.glo-col{
	height: 90%;
}

#control{
	width: 100%;
}

#snapshot{
	height: 20%;
}

.snapshot{
	border: 1px solid black;
}

#canvas{
	height: 80%;
}

#canvas > svg{
	height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
}


#history-panel{
	padding: 0;
}
	
#control{
	height: 10%;
	text-align: center;
	padding-top: 15px;
}

#history {
	height: 90%;
	overflow:scroll;	
}

#history div{
	font-size: 14px;
	border-top: 1px solid #DDDDDD;
	border-bottom: 1px solid #DDDDDD;
	list-style-type: none;
	text-align: center;
	padding: 15px 0 15px 0;
	cursor: pointer;
}

#history > .selected{
	background-color: #EEEEEE;
}

